feat(ex-1): add 3 animals

--- a/ex-1-pricing-grid/style.css
+++ b/ex-1-pricing-grid/style.css
@@ -1,1 +1,72 @@
-/* Start coding here */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1.2rem;
+}
+html {
+  font-size: 16px;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  height: 100vh;
+  background: linear-gradient(90deg, rgb(190, 88, 148), rgb(65, 114, 204));
+}
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  background-color: hsla(0, 100%, 100%, 0.1);
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+.animal-name {
+  margin: 1rem;
+  font-weight: bold;
+  color: white;
+  font-size: 2rem;
+}
+.description {
+  margin: 1rem;
+  text-align: center;
+}
+.trait-box {
+  margin: 0.2rem;
+  text-align: center;
+}
+.trait {
+  margin: 0.4rem;
+}
+.price {
+  margin: 0.5rem;
+  font-size: 3rem;
+  font-weight: 400;
+}
+.hr{
+   height: 0.01rem;
+   background-color: black;
+}
+
+button {
+   margin: 1rem;
+   padding: 0.5rem;
+   width: 80%;
+   border-radius: 0.25rem;
+   background-color: yellow;
+   border: none;
+}
+.box-1 {
+  height: 30rem;
+}
+.box-2 {
+   height: 35rem;
+ }
+ .box-3{
+   height: 25rem;
+ }
