--- a/ex-1-pricing-grid/style.css
+++ b/ex-1-pricing-grid/style.css
@@ -1,1 +1,174 @@
-/* Start coding here */
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Kodchasan&family=Lora:ital,wght@0,400..700;1,400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+main {
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(
+    90deg,
+    rgb(247, 56, 199),
+    rgb(36, 152, 247)
+  );
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.container-1 {
+  width: 240px;
+  height: 450px;
+  padding: 20px;
+  background-color: hsla(120, 100%, 100%, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    margin: 1rem;
+    color: white;
+  }
+
+  .content {
+    margin: 1rem;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  .sub-content {
+    margin: 0.5rem;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .divider {
+    height: 1px;
+    background-color: hsla(0, 3%, 26%, 0.2);
+  }
+
+  .price {
+    margin: 20px;
+    font-weight: 500;
+    font-size: 40px;
+  }
+
+  button {
+    width: 120px;
+    height: 30px;
+    border: 0;
+    border-radius: 5%;
+    background-color: yellow;
+  }
+}
+
+.container-2 {
+  width: 240px;
+  height: 525px;
+  padding: 20px;
+  background-color: hsla(120, 100%, 100%, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    margin: 1rem;
+    color: white;
+  }
+
+  .content {
+    margin: 1rem;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  .sub-content {
+    margin: 0.5rem;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .divider {
+    height: 1px;
+    background-color: hsla(0, 3%, 26%, 0.2);
+  }
+
+  .price {
+    margin: 20px;
+    font-weight: 500;
+    font-size: 40px;
+  }
+
+  button {
+    width: 120px;
+    height: 30px;
+    border: 0;
+    border-radius: 5%;
+    background-color: yellow;
+  }
+}
+
+.container-3 {
+  width: 240px;
+  height: 450px;
+  padding: 20px;
+  background-color: hsla(120, 100%, 100%, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    margin: 1rem;
+    color: white;
+  }
+
+  .content {
+    margin: 1rem;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+  }
+
+  .sub-content {
+    margin: 0.5rem;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .divider {
+    height: 1px;
+    background-color: hsla(0, 3%, 26%, 0.2);
+  }
+
+  .price {
+    margin: 20px;
+    font-weight: 500;
+    font-size: 40px;
+  }
+
+  button {
+    width: 120px;
+    height: 30px;
+    border: 0;
+    border-radius: 5%;
+    background-color: yellow;
+  }
+}
