--- a/ex2-holygrail-layout/style.css
+++ b/ex2-holygrail-layout/style.css
@@ -1,1 +1,57 @@
-/* Start coding here */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  width: 100vw;
+  height: 50px;
+  padding: 1rem;
+  border: 1px solid white;
+  background-color: rgb(0, 98, 128);
+  text-align: center;
+}
+
+main {
+  width: 100vw;
+  height: 840px;
+  background-color: rgb(255, 123, 0);
+  display: flex;
+  flex-direction: row;
+
+  div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav {
+    -ms-flex: 1;
+    flex: 1;
+    border: 1px solid white;
+  }
+
+  .content {
+    -ms-flex: 2;
+    flex: 2;
+    border: 1px solid white;
+    text-align: center;
+  }
+
+  .advertisement {
+    -ms-flex: 1;
+    flex: 1;
+    border: 1px solid white;
+    text-align: center;
+  }
+}
+
+footer {
+  width: 100vw;
+  height: 50px;
+  padding: 1rem;
+  background-color: rgb(250, 197, 127);
+  border: 1px solid white;
+  text-align: center;
+}
