--- a/ex2-holygrail-layout/style.css
+++ b/ex2-holygrail-layout/style.css
@@ -1,1 +1,54 @@
 /* Start coding here */
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
+header {
+  display: flex;
+  background-color: rgb(0, 132, 139);
+  height: 10%;
+  font-size: 2rem;
+  font-weight: 600;
+  justify-content: center;
+  align-items: center;
+}
+
+section {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 80%;
+}
+
+section div {
+  flex: 1;
+}
+
+.navigation,
+.content,
+.advertisement {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: 600;
+  background-color: orange;
+  border: 1px solid rgb(255, 255, 255);
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: 600;
+  background-color: rgb(255, 245, 158);
+  height: 10%;
+}
